<resources>
    <string name="app_name">Dating</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_facebook">Continue with Facebook</string>
    <string name="login_google">Continue with Google</string>
    <string name="login_phone">Sign up with phone</string>
    <string name="text_login">We will never post anythings</string>
    <string name="text_login2">Already have an account? Sign in </string>
    <string name="ganday_title"> Gần đây </string>
    <string name="batgap_title"> Bắt gặp </string>
    <string name="nhantin_title">Nhắn tin</string>
    <string name="hoso_title"> Hồ sơ </string>
    <string name="action_share">Share</string>
    <string name="action_upload">Upload</string>
    <string name="action_copy">Copy</string>
    <string name="action_print">Print</string>
    <string name="gioithieuveban">Giới thiệu về bạn...</string>
    <string name="veban">Xin chào các bạn, mình tên là Diễm, mình năm nay 19 tuổi và không bao giờ đá xoáy người yêu của mình.
    Diễm nấu ăn rất ngon nên cá bạn sẽ được nếm thử thành quả của Diễm. Rất vui được làm quen với các bạn</string>
    <string name="veban2">Điều gì làm bạn nổi bật? Càng nhiều thông tin bạn càng trở nên thu hút.</string>
</resources>