<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout1"
    android:background="@drawable/background"
    tools:context=".Login_Activity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/icon_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"></ImageView>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/icon_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints"></ImageView>

    <Button
        android:id="@+id/login_fb"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button_facebook"
        android:drawableLeft="@drawable/com_facebook_button_login_logo"
        android:paddingLeft="50dp"
        android:paddingRight="30dp"
        android:text="@string/login_facebook"
        android:textColor="@color/common_google_signin_btn_text_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/login_gg"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="50dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/custom_button_google"
        android:drawableLeft="@drawable/ic_google_icon"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/login_google"
        android:textColor="@color/com_facebook_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_fb"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_login"
        android:textColor="@color/common_google_signin_btn_text_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_gg" />

    <Button
            android:id="@+id/login_phone"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="50dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/custom_button_transperent"
        android:text="@string/login_phone"
        android:textColor="@color/common_google_signin_btn_text_dark"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_login2"
        android:textColor="@color/common_google_signin_btn_text_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_phone" />


</androidx.constraintlayout.widget.ConstraintLayout>